[project]
name = "iflow-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "fastmcp>=2.14.4",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "mcp>=1.25.0",
    "python-dotenv>=1.2.1",
    "sap-ai-sdk-gen>=5.10.0",
]
